--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -170,6 +170,7 @@ dev_dependencies:
   flutter_native_splash:
   agora_rtc_engine: ^6.1.0
   permission_handler: ^10.2.0
+  get_storage: ^2.1.1
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
