--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -171,6 +171,7 @@ dev_dependencies:
   agora_rtc_engine: ^6.1.0
   permission_handler: ^10.2.0
   get_storage: ^2.1.1
+  file_picker: ^5.3.0
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
