get courses get trainer profile show most wanted courses in home show profile in home

--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=/Users/admin/Library/Android/sdk
-flutter.sdk=/Users/admin/Desktop/flutter sdk/2.19.2/flutter
+sdk.dir=C:\\Users\\Admin\\AppData\\Local\\Android\\sdk
+flutter.sdk=E:\\flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
