--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
 
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -106,7 +107,7 @@ dependencies:
   # Determine the type of handheld device on Flutter,  Like if the device is a Tablet or is iPhoneX or later or has notch.
   flutter_device_type: ^0.4.0
   flutter_localizations: # Add this line
-    sdk: flutter         # Add this line
+    sdk: flutter # Add this line
 
   dots_indicator: ^2.0.0
   # firebase_auth: ^4.2.1
@@ -184,6 +185,7 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  generate: true
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
