--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -106,6 +106,9 @@ dependencies:
   responsive_builder: ^0.4.1
   # Determine the type of handheld device on Flutter,  Like if the device is a Tablet or is iPhoneX or later or has notch.
   flutter_device_type: ^0.4.0
+  firebase_core: ^2.12.0
+  cloud_firestore: ^4.7.0
+  firebase_storage: ^11.2.0
   flutter_localizations: # Add this line
     sdk: flutter # Add this line
 
