--- a/ios/Flutter/Generated.xcconfig
+++ b/ios/Flutter/Generated.xcconfig
@@ -1,5 +1,5 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=/Users/admin/Desktop/flutter sdk/2.19.2/flutter
+FLUTTER_ROOT=/Users/admin/Desktop/flutter sdk/2.19.2(2)/flutter
 FLUTTER_APPLICATION_PATH=/Users/admin/Desktop/trainee_restaurantapp
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_TARGET=lib/main.dart
