--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
     <uses-permission android:name="android.permission.READ_PRIVILEGED_PHONE_STATE"
         tools:ignore="ProtectedPermissions" />
    <application
-        android:label="trainee_restaurantapp"
+        android:label="yacoach partner"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
