--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -133,15 +133,9 @@ dependencies:
   flutter_polyline_points: ^1.0.0
   uuid: ^3.0.5
   image_picker: ^0.8.4+5
-
   location: ^4.3.0
-
-  permission_handler: ^10.2.0
-
   shimmer: ^2.0.0
-
   cached_network_image: ^3.2.0
-
   flutter_google_places: ^0.3.0
   geolocator: ^9.0.2
   geocoding: ^2.0.2
@@ -172,10 +166,11 @@ dev_dependencies:
   linter: ^1.15.0
   # Change native code splash
   flutter_native_splash:
-  agora_rtc_engine: ^1.0.5
-  permission_handler: ^10.2.0
+  agora_rtc_engine: ^6.1.1+1
+  agora_uikit: ^1.3.3
   get_storage: ^2.1.1
   file_picker: ^5.3.0
+
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
