--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -142,6 +142,11 @@ dependencies:
 
   cached_network_image: ^3.2.0
 
+  firebase_messaging: ^14.1.1
+  flutter_local_notifications: ^9.3.2
+  moyasar: ^2.0.0
+  unicode_moyasar: ^1.0.3
+
   flutter_google_places: ^0.3.0
   geolocator: ^9.0.2
   geocoding: ^2.0.2
