--- a/ios/Flutter/Generated.xcconfig
+++ b/ios/Flutter/Generated.xcconfig
@@ -1,8 +1,8 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=/Users/admin/Desktop/flutter sdk/2.19.2(2)/flutter
-FLUTTER_APPLICATION_PATH=/Users/admin/Desktop/trainee_restaurantapp
+FLUTTER_ROOT=E:\flutter
+FLUTTER_APPLICATION_PATH=E:\FlutterProjects\tasks\trainee_restaurantapp
 COCOAPODS_PARALLEL_CODE_SIGN=true
-FLUTTER_TARGET=lib/main.dart
+FLUTTER_TARGET=lib\main.dart
 FLUTTER_BUILD_DIR=build
 FLUTTER_BUILD_NAME=1.0.0
 FLUTTER_BUILD_NUMBER=1
