solve some bugs

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -162,6 +160,7 @@ dependencies:
   step_progress_indicator: ^1.0.2
   flutter_svg: ^2.0.4
   syncfusion_flutter_charts: ^21.1.37
+  file_picker: ^5.2.0+1
 dev_dependencies:
   flutter_test:
     sdk: flutter
