--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -161,6 +161,7 @@ dependencies:
   flutter_svg: ^2.0.4
   syncfusion_flutter_charts: ^21.1.37
   file_picker: ^5.2.0+1
+  firebase_auth: ^4.6.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -176,7 +177,7 @@ dev_dependencies:
   linter: ^1.15.0
   # Change native code splash
   flutter_native_splash:
-#  agora_rtc_engine: ^6.1.1+1
+  agora_rtc_engine: ^6.1.1+1
   get_storage: ^2.1.1
   file_picker: ^5.3.0
   # The "flutter_lints" package below contains a set of recommended lints to
