--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -162,6 +162,7 @@ dependencies:
   syncfusion_flutter_charts: ^21.1.37
   file_picker: ^5.2.0+1
   firebase_auth: ^4.6.1
+  http_parser:
 dev_dependencies:
   flutter_test:
     sdk: flutter
