--- a/ios/Flutter/Generated.xcconfig
+++ b/ios/Flutter/Generated.xcconfig
@@ -1,15 +1,14 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=/Users/admin/Desktop/flutter sdk/2.19.2(2)/flutter
-FLUTTER_APPLICATION_PATH=/Users/admin/Desktop/trainee_restaurantapp
+FLUTTER_ROOT=E:\flutter
+FLUTTER_APPLICATION_PATH=E:\FlutterProjects\tasks\trainee_restaurantapp
 COCOAPODS_PARALLEL_CODE_SIGN=true
-FLUTTER_TARGET=/Users/admin/Desktop/trainee_restaurantapp/lib/main.dart
+FLUTTER_TARGET=lib\main.dart
 FLUTTER_BUILD_DIR=build
 FLUTTER_BUILD_NAME=1.0.0
 FLUTTER_BUILD_NUMBER=1
 EXCLUDED_ARCHS[sdk=iphonesimulator*]=i386
 EXCLUDED_ARCHS[sdk=iphoneos*]=armv7
-DART_DEFINES=Zmx1dHRlci5pbnNwZWN0b3Iuc3RydWN0dXJlZEVycm9ycz10cnVl,RkxVVFRFUl9XRUJfQVVUT19ERVRFQ1Q9dHJ1ZQ==
 DART_OBFUSCATION=false
 TRACK_WIDGET_CREATION=true
 TREE_SHAKE_ICONS=false
-PACKAGE_CONFIG=/Users/admin/Desktop/trainee_restaurantapp/.dart_tool/package_config.json
+PACKAGE_CONFIG=.dart_tool/package_config.json
