--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -163,6 +163,8 @@ dependencies:
   file_picker: ^5.2.0+1
   firebase_auth: ^4.6.1
   http_parser:
+  zego_uikit_prebuilt_call: ^3.4.0
+  zego_uikit_signaling_plugin: ^2.1.9
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -178,9 +180,9 @@ dev_dependencies:
   linter: ^1.15.0
   # Change native code splash
   flutter_native_splash:
-  agora_rtc_engine: ^6.1.1+1
+#  agora_rtc_engine: ^6.1.1+1
   get_storage: ^2.1.1
-  file_picker: ^5.3.0
+  file_picker:
   flutter_chat_bubble: ^2.0.2
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
