--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=C:\\Users\\dell\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\src\\flutter
-flutter.buildMode=release
+sdk.dir=/Users/admin/Library/Android/sdk
+flutter.sdk=/Users/admin/Desktop/flutter sdk/2.19.2(2)/flutter
+flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
